# chat-tui

./: .gitignore  Cargo.toml  README.md
logs/: chat.txt  system.txt
src/: ai.rs  app.rs  main.rs  ui.rs
src/app/: io.rs
src/ui/: button.rs  panel.rs
